--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A stroybook 6 with TypeScript demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [
     "stroybook",
@@ -14,7 +16,13 @@
   "author": "Prateek Surana",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@storybook/addon-actions": "^6.1.9",
+    "@storybook/addon-essentials": "^6.1.9",
+    "@storybook/addon-links": "^6.1.9",
+    "@storybook/react": "^6.1.9",
     "@types/react": "^17.0.0",
+    "babel-loader": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "typescript": "^4.1.2"
@@ -22,5 +30,6 @@
   "peerDependencies": {
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
-  }
+  },
+  "dependencies": {}
 }
