--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "my-awesome-component-library",
   "version": "1.0.0",
   "description": "A stroybook 6 with TypeScript demo",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build": "rollup -c"
   },
   "keywords": [
     "stroybook",
@@ -17,14 +20,21 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
     "@storybook/addon-actions": "^6.1.9",
     "@storybook/addon-essentials": "^6.1.9",
     "@storybook/addon-links": "^6.1.9",
     "@storybook/react": "^6.1.9",
     "@types/react": "^17.0.0",
     "babel-loader": "^8.2.2",
+    "postcss": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "rollup": "^2.34.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.29.0",
     "typescript": "^4.1.2"
   },
   "peerDependencies": {
