--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "prepublishOnly": "yarn build"
+  },
+  "np": {
+    "publish": false,
+    "yolo": true
   },
   "keywords": [
     "stroybook",
