--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-awesome-component-library",
-  "version": "1.0.3",
-  "description": "A stroybook 6 with TypeScript demo",
+  "name": "upnotes-react-component-template",
+  "version": "0.1.13",
+  "description": "A storybook 6 with TypeScript demo",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
@@ -10,7 +10,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build": "rollup -c",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "build-storybook": "build-storybook -c .storybook -o .out"
   },
   "np": {
     "publish": false,
