--- a/.github/workflows/storybook-gh-pages-deploy.yml
+++ b/.github/workflows/storybook-gh-pages-deploy.yml
@@ -17,5 +17,7 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
+          clean: true
           branch: gh-pages # The branch the action should deploy to.
           folder: .out # The folder the action should deploy.
+          ssh-key: ${{ secrets.DEPLOY_KEY }} # using ssh key as token does not have permission to build gh-pages - https://github.com/JamesIves/github-pages-deploy-action/tree/dev#using-an-ssh-deploy-key-
