--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.29.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.1.2"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "classnames": "^2.3.2"
   }
 }
