⬆️ Upgrade specific dependencies

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-awesome-component-library",
   "version": "1.0.3",
   "description": "A stroybook 6 with TypeScript demo",
+  "type": "module",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
@@ -24,9 +25,9 @@
   "author": "Prateek Surana",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@babel/core": "^7.12.9",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
@@ -36,7 +37,7 @@
     "@storybook/react": "^6.5.16",
     "@types/react": "^18.0.27",
     "babel-loader": "^8.2.2",
-    "postcss": "^8.2.1",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^2.34.2",
