--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-typescript": "^11.1.1",
     "@storybook/addon-actions": "^7.0.11",
     "@storybook/addon-essentials": "^7.0.11",
     "@storybook/addon-links": "^7.0.11",
@@ -41,10 +42,10 @@
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^2.34.2",
+    "rollup": "^3.21.6",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.29.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^7.0.11",
     "typescript": "^5.0.4"
   },
